--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="fondo">
     <div class="titulo-container">
-      <h1>¡No pierdas <span>la cuenta!</span></h1>
+      <h1>Nao percas <span>a conta</span></h1>
     </div>
 
     <div class="notas-container">
