--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
   <div class="fondo">
     <div class="titulo-container">
-      <h1>Nao percas <span>a conta</span></h1>
+      <h1>
+        <img src="image/logo.png" alt="" style="width: 100px; height: 100px;">
+
+        Nao percas <span>a conta</span></h1>
     </div>
 
     <div class="notas-container">
@@ -80,8 +83,6 @@
         </div>
       </div>
     </div>
-
-
   </div>
   <script src="js/app.js"></script>
 </body>
